--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p></p>
                     </div>
                     <div class="button-selecionar">
-                        <button class="card-button">Selecionar</button>
+                        <button class="card-button">Inscreva-se</button>
                     </div>
                     <div class="divider">
                     </div>
@@ -70,7 +70,7 @@
                         <span>R$287,086</span><p> R$239,88 por ano</p>
                     </div>
                     <div class="button-selecionar">
-                        <button class="card-button">Selecionar</button>
+                        <button class="card-button">Adquirir Pro</button>
                     </div>
                     <div class="divider">
                     </div>
@@ -93,7 +93,7 @@
                         <span>R$719,86</span><p>R$599,88 por ano</p>
                     </div>
                     <div class="button-selecionar">
-                        <button class="card-button">Selecionar</button>
+                        <button class="card-button">Adquirir Business</button>
                     </div>
                     <div class="divider">
                     </div>
@@ -117,7 +117,7 @@
                         <p></p>
                     </div>
                     <div class="button-selecionar">
-                        <button class="card-button">Selecionar</button>
+                        <button class="card-button">Contate-nos</button>
                     </div>
                     <div class="divider">
                     </div>
